--- a/sass/_templates/_price.sass
+++ b/sass/_templates/_price.sass
@@ -27,6 +27,9 @@
             .price__btn-wrap
                 bottom: -5.5rem
                 z-index: 2
+                opacity: 1
+                box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1)
+
     &__text
         background-color: $light    
     &__tag
@@ -52,6 +55,7 @@
         background-color: $light
         transition: 0.3s ease-in-out
         z-index: -1
+        opacity: 0
 @media screen and ( max-width: 1199px )
     .price
         &__col
@@ -67,8 +71,9 @@
                 margin-bottom: 8rem
         &__btn-wrap
             bottom: -5.5rem
-            z-index: 2   
+            z-index: 1   
             box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.05)
+            opacity: 1
 
 @media screen and ( max-width: 575px )
     .price
